--- a/package.json
+++ b/package.json
@@ -6,22 +6,37 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^0.8.5",
+    "@types/bcryptjs": "^2.4.1",
+    "@types/bluebird": "^3.5.19",
+    "@types/express": "^4.11.0",
+    "@types/mongoose": "^4.7.32",
+    "@types/multer": "^1.3.6",
+    "@types/passport": "^0.4.2",
+    "@types/slug": "^0.9.0",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.0.5",
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "^2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.15.6",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
-    "sails-mysql": "^0.11.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "react": "^16.2.0",
+    "react-router": "^4.2.0",
+    "redux": "^3.7.2",
     "serve-favicon": "^2.3.0",
-    "slug": "^0.9.1",
-    "waterline": "^0.10.26"
+    "slug": "^0.9.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-less": "^3.0.3"
+    "@types/node": "^9.3.0",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.0.3",
+    "typescript": "^2.6.2",
+    "webpack": "^3.10.0"
   }
 }
