--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/redux": "^3.6.0",
     "@types/sharp": "^0.17.8",
     "@types/slug": "^0.9.0",
-    "@types/toastr": "^2.1.35",
     "axios": "^0.17.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.0.5",
@@ -50,11 +49,11 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-sound": "^1.1.0",
+    "react-toastify": "^4.0.1",
     "redux": "^3.7.2",
     "serve-favicon": "^2.3.0",
     "sharp": "^0.20.2",
-    "slug": "^0.9.1",
-    "toastr": "^2.1.4"
+    "slug": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^9.3.0",
