--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "music_app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./dist_server/server.js"
+    "start": "node ./dist_server/server.js",
+    "build_dev": "webpack -w --mode development"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
@@ -29,6 +30,7 @@
     "body-parser": "~1.13.2",
     "bootstrap": "^4.0.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.3.5",
     "debug": "^2.2.0",
     "elasticsearch": "^14.2.2",
@@ -51,6 +53,7 @@
     "react-sound": "^1.1.0",
     "react-toastify": "^4.0.1",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "serve-favicon": "^2.3.0",
     "sharp": "^0.20.2",
     "slug": "^0.9.1"
@@ -67,6 +70,7 @@
     "style-loader": "^0.20.1",
     "ts-loader": "^4.0.0",
     "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4"
   }
 }
