--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router": "^4.0.21",
     "@types/react-router-dom": "^4.2.3",
     "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.3.0",
     "@types/sharp": "^0.17.8",
     "@types/slug": "^0.9.0",
     "axios": "^0.17.1",
@@ -53,7 +54,8 @@
     "react-sound": "^1.1.0",
     "react-toastify": "^4.0.1",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
+    "redux-actions": "^2.4.0",
+    "redux-thunk": "^2.3.0",
     "serve-favicon": "^2.3.0",
     "sharp": "^0.20.2",
     "slug": "^0.9.1"
