--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea
 node_modules
 public/audio
-public/images/cover
+public/images/cover/*
 !public/images/cover/music-placeholder.png
 dist_server
 public/dist_client
