--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/passport": "^0.4.2",
     "@types/react": "^16.0.35",
     "@types/react-dom": "^16.0.3",
+    "@types/react-loadable": "^5.4.0",
     "@types/react-modal": "^3.1.1",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.21",
@@ -30,6 +31,7 @@
     "bluebird": "^3.0.5",
     "body-parser": "~1.13.2",
     "bootstrap": "^4.0.0",
+    "compression": "^1.7.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.3.5",
@@ -46,7 +48,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.3.0",
+    "react-async-component": "^2.0.0",
     "react-dom": "^16.3.0",
+    "react-loadable": "^5.4.0",
     "react-modal": "^3.1.11",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -64,6 +68,7 @@
     "@types/node": "^9.3.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
