--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "module": "commonJS",
+    "module": "esnext",
     "target": "es5",
-    "lib": ["es7", "dom"],
+    "lib": [
+      "dom",
+      "es7",
+    ],
     "moduleResolution": "node",
     "rootDir": "public/javascripts/app",
     "outDir": "public/dist_client",
